User can now update polling_time at run time by sending a payload
The user can now update polling_time at run time. This commit also adds
some unit tests to verify that these methods work correctly.
